# ai-lsp

./: AGENTS.md  README.md  dev_server.py  dev_server.py.old  main.py  pyproject.toml  test.md  test.py
ai_lsp/: main.py
ai_lsp/agents/: base.py  constraints.py  context.py  guard.py  intent.py  intent_types.py  prefix_alignment.py  range_alignment.py  semantics.py
ai_lsp/ai/: constraints.py  engine.py  ollama_client.py  sanitize.py
ai_lsp/ai/orchestrator/: __init__.py  decision.py  (+4 more)
ai_lsp/domain/: completion.py  constraints.py  semantics.py
ai_lsp/lsp/: capabilities.py  context_builder.py  documents.py  server.py
docs/: 00-plan.md  01-base-lsp-implementation.md  02-document-and-text-tracking.md  03-context-builder.md  04-ollama-integration.md  04.5-acync+cancellation.md  04.7-ghost-text.md  05-comepletion-agents.md  05.1-prefix-alignemt-agent.md  05.2-multiline+cursor-in-the-middle.md  05.4-multiline-completion.md  05.5-cursor-in-the-middle.md  07.1-cursor-window-agent.md  07.2-prefix-semantic-agent.md  07.3-suffix-constraint-agent.md  7.4-completion-decision-and-orchestration-layer.md  plan.md
lsp/: capabilities.py  server.py
tests/agents/: test_cursor_window_intent.py  test_prefix_alignment_agent.py  test_prefix_semantics.py  test_range_alignment_agent.py  test_range_alignment_agent_cursor_in_the_middle.py  test_range_alignment_agent_multiline.py  test_suffix_constraint_agent_stop_sequences.py  test_suffix_constraints.py
tests/ai/: test_engine_stop_sequences.py  test_merge_suffix_constraints.py
tests/orchestrator/: test_default_orchestrator.py
