[project]
name = "ai-lsp"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuri",email = "yuriseki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygls (>=2.0.0,<3.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
