[project]
name = "ai-lsp"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuri",email = "yuriseki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygls (>=2.0.0,<3.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
]

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.0"
watchdog = "^4.0.0"
pytest = "^9.0.2"

[project.scripts]
ai-lsp = "ai_lsp.main:main"

[[tool.poetry.packages]]
include = "ai_lsp"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
